# marclou-first-said

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
context/features/: 1-fetch-youtube-videos.md  2-fetch-video-transcript.md  3-process-unique-words.md  4-tweet-unique-words.md
context/features/completed/: 3-process-unique-words.md  4-tweet-unique-words.md  heroku-migration.md
context/helpers/: composer-template.md  copywriting.md  progress.md  project-description.md  tech-stack.md
docs/adr/: 001-transcript-storage.md
marclou_first_said/: config.py  dependencies.py
marclou_first_said/models/: __init__.py  video.py  word.py
marclou_first_said/services/: __init__.py  database.py  transcript.py  twitter.py  word_processing.py  youtube.py
marclou_first_said/tasks/: __init__.py  fetch_transcripts.py  fetch_videos.py  process_words.py  tweet_words.py
tests/: conftest.py  test_fetch_transcripts.py  test_fetch_videos.py
