[tool.poetry]
name = "marclou-first-said"
version = "0.1.0"
description = "YouTube-to-Twitter Bot for monitoring and tweeting unique words from new videos"
authors = ["Tjerkienator"]
readme = "README.md"
packages = [{include = "marclou_first_said"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
google-api-python-client = "^2.161.0"
motor = "^3.7.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
youtube-transcript-api = "^0.6.3"
tweepy = "^4.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
